catfacts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-facts
  labels:
    app: cat-facts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-facts
  template:
    metadata:
      labels:
        app: cat-facts
    spec:
      containers:
      - name: stoic-maxwell
        image: keenkevin/cat-facts
        ports:
        - containerPort: 80
