catfacts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-facts-service
spec:
  type: NodePort
  selector:
    app: cat-facts
  ports:
    - port: 80
      targetPort: 80
