catfacts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cat-facts-ingress
spec:
  rules:
  - host: catfacts.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cat-facts-service
            port:
              number: 80
  - host: nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
